--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,14 +1,15 @@
-﻿html, body{
+﻿html, body {
   min-height: 100%;
   height: 100%;
 }
 
-.fill{
+.fill {
   height: calc(100vh - 100px);
 }
 
 body {
-  padding-top: 60px; /* space for the top nav bar */
+  padding-top: 60px;
+  /* space for the top nav bar */
   margin-right: 30px;
 }
 
@@ -16,6 +17,23 @@ body {
   overflow: auto;
   width: 100%;
   height: calc(100vh - 150px);
+}
+
+.rowReport {
+  margin-left: 10px;
+  cursor: pointer;
+  border-bottom: 1px #C0C0C0 solid;
+}
+
+.rowLabel {
+  padding-top: 40px;
+  height: 100px;
+  vertical-align: middle;
+  text-align: center;
+}
+
+.rowTitle {
+  text-align: center;
 }
 
 #forgeViewer {
